deploy/k8s/1.8+/hello_world-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  labels:
    app: hello-world
spec:
  backend:
    serviceName: hello-world-service
    servicePort: 80
